# agentic-reflection-research

./: .dockerignore  .gitignore  CODEBASE_MAP.md  COMPREHENSIVE_BUILD_SUMMARY.md  Iterative Reflection vs.txt  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  research.db  test_reflection_experiment.py
api/: main.py  use_case_server.py
config/: settings.py
config/experiments/: system_design_pilot.json
docker/: Dockerfile
docs/: PORT_ALLOCATION.md  USE_CASE_EXTENSION_GUIDE.md
framework/: __init__.py  base_agent.py  base_evaluator.py  base_orchestrator.py
postman/: Agentic-Research-Framework.postman_collection.json  Agentic-Research-Framework.postman_environment.json  README.md
research/: experiment_orchestrator.py
scripts/: dev_entrypoint.sh  research_entrypoint.sh
use_cases/system_design/: __init__.py  agents.py  config.py  docker-compose.yml  evaluator.py  orchestrator.py
use_cases/system_design/docker/: Dockerfile  entrypoint.sh  research_entrypoint.sh
use_cases/system_design/tools/: __init__.py  cloud_pricing.py
